--- a/inventory/manager/merge.css
+++ b/inventory/manager/merge.css
@@ -258,8 +258,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 320px;
-    height: 300px;
+    width: 330px;
+    min-height: 300px;
     border-radius: 5px;
 }
 .close_merge_add_button {
@@ -271,8 +271,7 @@
     height: 28px;
 }
 .merge_add_container {
-    width: 100%;
-    height: 100%;
+    min-height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -294,6 +293,46 @@
     padding: 2px 4px;
     border-radius: 5px;
 }
+
+.merge_add_list_input_div {
+    position: relative;
+}
+
+#merge_add_list_input {
+    width: 228px;
+    padding: 6px;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+.merge_add_list_input_result_container {
+    background-color: #ffffff;
+    position: absolute;
+    width: 230px;
+    top: 38px;
+    left: 5px;
+}
+.input_result_div {
+    cursor: pointer;
+    padding: 2px 4px;
+    transition: all .2s;
+    background-color: transparent;
+}
+.input_result_div:hover {
+    background-color: #83cbea;
+    transition: all .2s;
+}
+.input_current_result_div {
+    background-color: #3eb4e7;
+    transition: all .2s;
+}
+
+.highlight_color {
+    color: #ff3939;
+    font-weight: 600;
+}
+
 .merge_add_confirm_button {
     cursor: pointer;
     padding: 4px 24px;
