--- a/consumption/style.css
+++ b/consumption/style.css
@@ -108,19 +108,28 @@
 .time_line_container > span {
     margin: 0px 8px;
 }
+.main_list_num_sum_container {
+    font-size: 18px;
+    font-weight: 600;
+    margin-right: 60px;
+    display: flex;
+}
+.main_list_num_sum {
+    text-decoration: underline;
+}
 
 .main_div_table_th_container {
     margin-top: 20px;
     display: grid;
     font-size: 14px;
     justify-content: center;
-    grid-template-columns: 32px 72px 72px 74px 170px 56px 60px 58px 60px 72px 90px 90px 80px 90px 84px 84px 80px 160px;
+    grid-template-columns: 48px 72px 72px 74px 140px 56px 60px 58px 60px 72px 72px 90px 80px 90px 84px 84px 54px 80px 140px;
     /* grid-template-rows: 24px; */
 }
 .table_info_container {
     display: grid;
     font-size: 14px;
-    grid-template-columns: 32px 72px 72px 74px 170px 56px 60px 58px 60px 72px 90px 90px 80px 90px 84px 84px 80px 160px;
+    grid-template-columns: 48px 72px 72px 74px 140px 56px 60px 58px 60px 72px 72px 90px 80px 90px 84px 84px 54px 80px 140px;
     justify-content: center;
 }
 .no_form_list_data {
@@ -203,6 +212,54 @@
 .th_17 {
     width: 180px;
 } */
+.pagination_container {
+    margin-top: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pre_page_btn,
+.next_page_btn {
+    width: 32px;
+    height: 32px;
+    display: block;
+    object-fit: cover;
+    padding: 9px;
+    cursor: pointer;
+}
+.next_page_btn {
+    transform: rotate(180deg);
+}
+.disable_page_btn {
+    opacity: 0.6;
+    cursor: not-allowed;
+}
+.pagination_pages_container {
+    margin: 0px 16px;
+    display: flex;
+}
+.pagination_page {
+    display: flex;
+    justify-content: center;
+    width: 28px;
+    height: 28px;
+    line-height: 12px;
+    padding: 6px;
+    margin: 0px 16px;
+    border-radius: 50%;
+    transition: 0.2s all ease;
+    background-color: transparent;
+    cursor: pointer;
+}
+.pagination_page:hover {
+    background-color: #d0d0d0;
+    transition: 0.2s all ease;
+}
+.current_pagination_page {
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: underline;
+}
 
 .under-line {
     position: fixed;
