--- a/controlleddrug/popup_muilt_med_select.css
+++ b/controlleddrug/popup_muilt_med_select.css
@@ -99,7 +99,7 @@
 }
 .muilt_med_icon_content {
     display: block;
-    padding: 6px 6px 6px 8px;
+    padding: 14px;
     width: 100%;
     height: 100%;
     font-weight: 600;
