--- a/frontpage_new/front_new.css
+++ b/frontpage_new/front_new.css
@@ -28,7 +28,7 @@
     justify-content: center;
     /* align-items: center; */
     flex-wrap: wrap;
-    padding: 80px 0px;
+    padding: 40px 0px;
 }
 .section_div {
     width: 340px;
@@ -79,10 +79,14 @@
     padding-top: 8px;
     letter-spacing: 2px;
 }
+
 .under-line {
     position: fixed;
     bottom: 0;
     left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     text-align: center;
     font-size: 18px;
@@ -90,8 +94,150 @@
     background-color: #ffffff;
     height: 30px;
     line-height: 30px;
+    z-index: 50;
+}
+.info_btn {
+    display: flex;
+    position: absolute;
+    right: 6%;
+    font-size: 16px;
+    cursor: pointer;
+    align-items: center;
+}
+.info_btn > img {
     display: block;
-    z-index: 5;
+    width: 20px;
+    height: 20px;
+    margin-right: 6px;
+}
+.info_btn > span {
+    display: block;
+    padding-bottom: 2px;
+}
+
+.popup_info_div {
+    width: 330px;
+}
+.ppi_header_container {
+    position: relative;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 8px;
+}
+.ppi_header_content {
+    color: #333;
+    font-size: 14px;
+    line-height: 24px;
+}
+.ppi_close_btn {
+    position: absolute;
+    display: block;
+    width: 24px;
+    height: 24px;
+    top: 0px;
+    right: 0px;
+    cursor: pointer;
+}
+.ppi_main_container {
+}
+.main_info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo_div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 168px;
+}
+.logo_div_img {
+    display: block;
+    width: 56px;
+    height: 56px;
+    object-fit: cover;
+}
+.logo_div_c_name {
+    font-size: 12px;
+    font-weight: 400;
+    text-align: center;
+}
+.i_am_line {
+    width: 1px;
+    height: 116px;
+    background-color: #000000;
+    margin: 0px 8px;
+}
+
+.company_info_container {
+    margin: 6px 0px;
+    display: flex;
+    font-size: 12px;
+    align-items: center;
+}
+.company_info_icon {
+    width: 14px;
+    height: 14px;
+    object-fit: cover;
+    display: block;
+    margin-right: 6px;
+}
+.business_div {
+    margin: 4px 0px;
+    padding: 4px;
+    color: white;
+    background-color: #3d3d3d;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 12px;
+    border-radius: 5px;
+}
+.product_div {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.proudct_container {
+    padding: 6px;
+    width: 50%;
+    display: flex;
+    align-items: flex-end;
+    font-size: 12px;
+}
+.proudct_icon {
+    display: block;
+    width: 52px;
+    height: 52px;
+    object-fit: cover;
+    margin-right: 4px;
+    transition: all 0.2s;
+}
+.proudct_name {
+    padding-bottom: 6px;
+}
+.ppi_footer_container {
+    display: flex;
+    justify-content: flex-end;
+}
+.btn {
+    margin: 4px;
+    font-weight: 600;
+    cursor: pointer;
+    font-size: 12px;
+    border: 1px solid black;
+    color: #F6F7F7;
+    padding: 4px 16px;
+    border-radius: 5px;
+    transition: all 0.2s ease-out;
+    background-color: black;
+}
+.btn:hover {
+    background-color: #6B6B63;
+    transition: all 0.2s ease-out;
 }
 
 @media screen and (max-width: 1200px) {
@@ -111,6 +257,9 @@
         padding: 24px;
         background-color: #d8d8d888;
         border-radius: 20px;
+    }
+    .info_btn > span {
+        display: none;
     }
 }
 
