--- a/login.css
+++ b/login.css
@@ -28,6 +28,7 @@ body {
     height: 30px;
     line-height: 30px;
     display: block;
+    font-weight: 400;
 }
 .login-form {
     box-sizing: border-box;
