--- a/frontpage/front_new.css
+++ b/frontpage/front_new.css
@@ -29,13 +29,20 @@
     flex-wrap: wrap;
     padding: 40px 0px;
 }
-.section_div {
+.section_div,
+.rotate_div {
     width: 340px;
     /* min-height: 645px; */
     margin: 24px;
     padding: 24px;
-    background-color: #d8d8d866;
+    background-color: #b8c6e8;
     border-radius: 20px;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: all 1s;
+}
+.rotate180 {
+    transform: rotateY(180deg);
 }
 .section_div > h2 {
     text-align: center;
@@ -77,6 +84,49 @@
     font-size: 20px;
     padding-top: 8px;
     letter-spacing: 2px;
+}
+
+.card_div {
+    top: 25px;
+    position: absolute;
+    width: 292px;
+    height: calc(100% - 48px);
+    background-color: #b8c6e8;
+    border-radius: 20px;
+    backface-visibility: hidden;
+}
+.card_div > h2 {
+    text-align: center;
+    font-size: 32px;
+}
+.card_div > h3 {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.back_div {
+    transform: rotateY(180deg);
+}
+.filp_btn {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    object-fit: cover;
+    transition: all 0.3s;
+    align-items: center;
+}
+.filp_btn > img {
+    position: relative;
+    display: block;
+    height: 22px;
+    width: 18px;
+    /* object-fit: cover; */
+    margin-left: 8px;
+    top: 1px;
 }
 
 .under-line {
@@ -126,13 +176,16 @@
     margin-bottom: 8px;
 }
 .ppi_header_content {
+    padding: 10px 0px 6px;
     color: #333;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 18px;
     text-align: center;
+    font-weight: 600;
 }
 .ppi_header_content > span {
     font-size: 12px;
+    font-weight: 400;
 }
 .ppi_close_btn {
     position: absolute;
@@ -142,8 +195,6 @@
     top: 0px;
     right: 0px;
     cursor: pointer;
-}
-.ppi_main_container {
 }
 .main_info {
     display: flex;
@@ -206,7 +257,7 @@
     cursor: pointer;
 }
 .business_div {
-    margin: 4px 0px;
+    margin: 12px 0px;
     padding: 4px;
     color: white;
     background-color: #3d3d3d;
@@ -270,13 +321,9 @@
         -webkit-writing-mode: vertical-lr;
         writing-mode: vertical-lr;
     }
-    .section_div {
-        width: 340px;
-        /* height: 480px; */
-        margin: 20px;
-        padding: 24px;
-        background-color: #d8d8d888;
-        border-radius: 20px;
+    .section_div,
+    .rotate_div {
+        min-height: 345px;
     }
     .info_btn > span {
         display: none;
