--- a/staff_management/popup_add_modify_staff.css
+++ b/staff_management/popup_add_modify_staff.css
@@ -40,6 +40,7 @@
 }
 .staff_info_container > input[type="text"],
 .staff_info_container > select {
+    width: 200px;
     flex-grow: 1;
     padding: 2px;
 }
