--- a/med_request/popup_search.css
+++ b/med_request/popup_search.css
@@ -31,6 +31,7 @@
     /* display: flex; */
     justify-content: space-evenly;
     align-items: center;
+    margin-bottom: 8px;
 }
 .search_mode_div {
     display: flex;
@@ -92,5 +93,6 @@
     padding: 4px;
 }
 .pps_footer_container {
+    display: flex;
     justify-content: space-between;
 }
