--- a/medGroup/medManager.css
+++ b/medGroup/medManager.css
@@ -467,12 +467,13 @@
     flex-grow: 1;
 }
 .med_item_img_container {
-    width: 20%; 
+    height: 128px;
+    width: 156px;
 }
 .med_item_img_container > img {
     display: block;
-    width: 100%;
     height: 100%;
+    width: 100%;
     object-fit: cover;
     object-position: center;
     border-radius: 3px 0px 0px 3px;
