--- a/ch_medical_order/popup_content.css
+++ b/ch_medical_order/popup_content.css
@@ -1,5 +1,6 @@
 .popup_cht_med_content_div {
     width: 660px;
+    max-height: 560px;
 }
 .ppcmc_header_container {
     width: 100%;
@@ -31,14 +32,15 @@
     justify-content: space-between;
 }
 .pp_patient_info_container {
-    padding: 8px 24px 12px;
+    padding: 4px 16px 8px;
 }
 .pppi_div {
     display: flex;
     align-items: center;
 }
 .pppi_div > span {
-    letter-spacing: 0.5rem;
+    font-size: 20px;
+    font-weight: 600;
     line-height: 28px;
     display: block;
     margin-right: 16px;
@@ -50,14 +52,28 @@
 .pp_med_table {
     width: 100%;
     border-collapse: collapse;
+    overflow: scroll;
 }
-th, td {
+th,
+td {
     border: 1px solid #000;
+    text-align: center;
 }
-.col1 { width: 5%; }
-.col2 { width: 35%; }
+
+.ppm_table_th {
+    background-color: #6f6f6f;
+    color: #fff;
+    padding: 4px;
+}
+.ppm_table_td {
+    padding: 2px 4px;
+}
+.col1 { width: 4%; }
+.col2 { width: 46%; }
 .col3 { width: 10%; }
-.col4 { width: 10%; }
-.col5 { width: 10%; }
-.col6 { width: 10%; }
+.col4 { width: 9%; }
+.col5 { width: 8%; }
+.col6 { width: 8%; }
 .col7 { width: 15%; }
+
+.td_col_2 { text-align: left; }
