--- a/frontpage/front_new.css
+++ b/frontpage/front_new.css
@@ -1,7 +1,14 @@
 
+@font-face {
+    font-family: 'Noto Sans TC';
+    src: url('../font/Noto_Sans_TC/static/NotoSansTC-Regular.ttf') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: "Noto Sans TC", sans-serif;
     font-optical-sizing: auto;
