--- a/pickingpage/style.css
+++ b/pickingpage/style.css
@@ -37,10 +37,12 @@
 .pp_barcode_input {
     margin: 16px;
     width: 320px;
-    height: 32px;
+    height: 42px;
     text-align: center;
     font-size: 1.2rem;
-    border-radius: 16px;
+    font-weight: 600;
+    border-radius: 8px;
+    border: 1px solid #000000;
 }
 .pick_light_all_off_btn {
     display: none;
