--- a/medicine_cart/popup_med_list.css
+++ b/medicine_cart/popup_med_list.css
@@ -96,3 +96,25 @@
     background-color: #000000;
     margin-bottom: 8px;
 }
+.ppml_bed_list_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.ppml_bed_card {
+    padding: 4px 12px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #888;
+    cursor: pointer;
+    color: #ffffff;
+}
+.ppml_bed_done {
+    background-color: #C1EA69;
+    color: #000;
+}
+.display_none {
+    display: none;
+}
